Fix sidebar workspace name overflow

--- a/webui/react/src/components/NavigationSideBar.module.scss
+++ b/webui/react/src/components/NavigationSideBar.module.scss
@@ -124,6 +124,7 @@
       display: flex;
       flex-grow: 1;
       height: 48px;
+      max-width: 100%;
 
       .icon {
         padding-inline: var(--theme-sizes-layout-big);
@@ -133,8 +134,9 @@
         height: var(--theme-sizes-layout-enormous);
         line-height: var(--theme-sizes-layout-enormous);
         overflow: hidden;
+        padding-right: var(--theme-sizes-layout-big);
         white-space: nowrap;
-        width: auto;
+        width: auto
       }
     }
     .navItem.active {
